wwwroot/css/site.css
:root {
    --bgColour: #181818;
    --bgStrength: 0.1;
    --textColour: #ffffff;
    --subtextColour: #bebebe;
    --splashColour: #777777;
    --headingColour: #ffffff;
    --itemColour: #303030;
    --itemShineColour: #4e4e4e;
    --itemOutline: #2b2b2b;
    --itemShineOutline: #272727;
    --iconImageBrightness: 1.0;
    --titleShadow: #000000;
    --contentShadow: #0000003a;
    --crosshatchStrength: 0.3;
    --quoteBackground: #0000009c;
    --quoteOutline: #ffffff2a;
    --quoteColour: #ffffff;

    --navitemScaling: 1.3;
    --iconRingAngle: -18deg;
    --iconScale: 1.0;
    --iconRingScale: 1.0;
}

html {
    font-family: "Varela", sans-serif;
    font-size: 40px;
    color: var(--textColour);
}
html, body {
    height: 100%;
    margin: 0;
    overflow: hidden;
    background-color: var(--bgColour);
}
@keyframes fadeIn {
    from { transform: translateY(-120vh); }
    to { transform: translateY(0); }
}
#schmove {
    animation: fadeIn 2s ease;
    transition: transform 2s ease;
}
#schmove.fade-out {
    transform: translateY(120vh);
}
.nav-link {
    font-size: 28px;
}
.nav-item {
    position: absolute;
    width: 140px;
    height: 180px;
    transition: transform 0.3s ease, filter 0.3s ease;
    pointer-events: all;
    z-index: 2;
}
.nav-item:hover {
    transform: scale(var(--navitemScaling)) !important;
    z-index: 999;
}
.nav-image {
    position: relative;
    background: linear-gradient(to top right, var(--itemColour) 0%,var(--itemColour) 40%,var(--itemShineColour) 50%,var(--itemColour) 60%,var(--itemColour) 100%);
    
    border-radius: 10px;
    box-shadow: 0 0 40px #0000003a;
    width: 140px;
    height: 140px;
    margin-bottom: -20px;

    background-size: 400% 400%;
    background-position: 0% 100%;

    display: flex;
    align-items: center;
    justify-content: center;

    outline: var(--itemOutline) 3px solid;

    transition: border-radius 0.3s ease;
}
.nav-image img {
    filter: brightness(var(--iconImageBrightness));
}
@keyframes shine {
    0% {
        filter: brightness(1);
        outline: var(--itemOutline) 3px solid;
    }
    50% {
        filter: brightness(1.2);
        outline: var(--itemOutline) 4px solid;
    }
    100% {
        filter: brightness(1);
        outline: var(--itemShineOutline) 5px solid;
    }
}
@keyframes gradient-move {
    from { background-position: 0% 100%; }
    to { background-position: 100% 0%; }
}

.nav-image:hover {
    animation: shine 1s ease, gradient-move 2s ease;
    border-radius: 12px;
    outline: var(--itemShineOutline) 5px solid;
}
.icon {
    position: absolute;
    left: 0;
    top: 0;
    
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 100%;

    z-index: 1000;

    pointer-events: none;

    animation: fadeIn 2s ease;
    transition: transform 2s ease;

    transform: scale(var(--iconScale));
}
.icon.fade-out {
    transform: translateY(120vh);
}

.glslCanvas {
    display: block;
    position: absolute;
    left: 0;
    top: 0;
    width: 100vw;
    height: 100vh;
    opacity: var(--bgStrength);
}
.content {
    position: absolute;
    left: 20%;
    top: 200px;
    font-size: 48px;
    color: #d3d3d3;
    text-shadow: 0 0 20px var(--titleShadow);
    z-index: 100;
    width: 60%;
}
@media (orientation: portrait) {
    .content {
        left: 5%;
        width: 90%;
        top: 300px;
    }
    .paragraph {
        max-width: 800px !important;
    }
    .side-image, #descriptions {
        opacity: 0 !important;
        pointer-events: none;
    }
}
.paragraph {
    font-size: 18px;
    color: var(--subtextColour);
    max-width: min(800px, 65%);
}
a {
    text-decoration: none;
    color: var(--textColour);
}
#title {
    position: fixed;
    left: 30px;
    top: 30px;
    font-size: 54px;
    color: var(--textColour);
    text-shadow: 0 0 20px var(--titleShadow);
    z-index: 10000;
}
#splash {
    position: fixed;
    left: 30px;
    top: 110px;
    font-size: 26px;
    color: var(--splashColour);
    text-shadow: 0 0 20px var(--titleShadow);
    z-index: 10000;
}
.settings {
    position: fixed;
    top: 50%;
    left: 50%;
    width: min(500px, 95%);;
    height: min(700px, 70%);
    padding: 35px;
    background-color: #1c1c1caa;
    border-radius: 10px;
    outline: #8d8d8d 2px solid;
    transform: translate(-50%, -50%);
    backdrop-filter: blur(60px);
    overflow-y: auto;
}
.chat {
    position: fixed;
    bottom: 50px;
    right: 140px;
    width: 450px;
    height: min(720px, 70%);
    padding: 35px;
    background-color: #1c1c1caa;
    border-radius: 10px;
    outline: #8d8d8d 2px solid;
    backdrop-filter: blur(60px);
}
#themeSwitcher {
    font-size: 24px;
    color: #ffffff;
    z-index: 10000;
    background-color: #2a2a2a;
    border: 2px solid #7a7a7a;
    border-radius: 8px;
    padding: 6px 10px;
    cursor: pointer;
    width: 200px;
}
label[for="themeSwitcher"] {
    font-size: 24px;
    color: #c0c0c0;
    z-index: 10000;
}
#useSound {
    z-index: 10000;
    border-radius: 8px;
    cursor: pointer;
    width: 24px;
    height: 24px;
}
label[for="useSound"] {
    font-size: 24px;
    color: #c0c0c0;
    z-index: 10000;
}
#chatUsername, #adminPasscode {
    z-index: 10000;
    border-radius: 8px;
    cursor: pointer;
    width: 150px;
    height: 32px;
    font-size: 24px;
}
label[for="chatUsername"], label[for="adminPasscode"] {
    font-size: 24px;
    color: #c0c0c0;
    z-index: 10000;
}
.quote {
    background-color: var(--quoteBackground);
    outline: 2px solid var(--quoteOutline);
    border-radius: 10px;
    box-shadow: 0 0 40px var(--contentShadow);
    padding: 20px;
    max-width: min(780px, 65%);
    margin-bottom: 30px;
}
.quote * {
    color: var(--quoteColour) !important;
}
hr {
    width: min(880px, 68%);
}
.heading {
    color: var(--headingColour);
}
body::before {
    content: "";
    background-image: url("https://dax.hiveborn.digital/x.png");
    opacity: var(--crosshatchStrength);
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-repeat: repeat;
    background-size: 60px;

    -webkit-mask-image: linear-gradient(to bottom, #000000ff, #00000000 60%);
    -webkit-mask-repeat: no-repeat;
    -webkit-mask-size: 100% 100%;
    mask-image: linear-gradient(to bottom, #000000ff, #00000000 60%);
    mask-repeat: no-repeat;
    mask-size: 100% 100%;

    pointer-events: none;
}

.gradient-overlay {
    position: absolute;
    top: 0;
    left: 0;
    width: 100vw;
    height: 100vh;
    z-index: 0;
    pointer-events: none;

    background-image: linear-gradient(180deg, var(--bgColour), #00000000 10%, #00000000 90%, var(--bgColour) 100%);
}
.side-image {
    position: absolute;
    left: min(70%, 900px);
    width: 35%;
    outline: #ffffff 2px solid;
    border-radius: 10px;
    box-shadow: 0 0 30px #000000a6;
}
.inline-image {
    max-width: min(65%, 500px);
    outline: #ffffff 2px solid;
    border-radius: 10px;
    box-shadow: 0 0 30px #000000a6;
}
#descriptions {
    position: fixed;
    left: 1%;
    top: 25%;
    width: 17%;
    height: 0px;
    background-color: var(--quoteBackground);
    z-index: 99999;
    border-radius: 10px;
    font-size: 24px;
    color: var(--quoteColour);
    padding: 0%;
    overflow-y: auto;
    transition: height 1.2s cubic-bezier(0.19, 1, 0.22, 1), opacity 0.6s ease;
    opacity: 0.5;
    font-size: 40%;
}
#descriptions:hover {
    opacity: 1.0;
}
.ringSegment {
    position: absolute;
    transform: rotate(var(--iconRingAngle)) scaleY(0.3) scale(var(--iconRingScale)) !important;
}

